# UbuntuCloudImageFetcher

./: CMakeLists.txt  IUbuntuCloudImageFetcher.h  README.md  UbuntuCloudImageFetcher.cpp  main.cpp
